# sapient

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARK.md  install.ps1  install.sh  justfile  test_builder.rs
.cargo/: config.toml
.firecrawl/: unsloth-gguf.md  unsloth-llama-gguf.md  unsloth-models.md  unsloth-qwen-gguf.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
Formula/: sapient.rb
crates/sapient-audio/: Cargo.toml
crates/sapient-audio/src/: capture.rs  config.rs  io.rs  lib.rs  mel.rs  permissions.rs  playback.rs  vad.rs
crates/sapient-audio/tests/: mel_tone.rs
crates/sapient-backends/cpu/: Cargo.toml
crates/sapient-backends/cpu/benches/: cpu_ops.rs
crates/sapient-backends/cpu/src/: backend.rs  lib.rs  pool.rs  spinpool.rs  thermal.rs
crates/sapient-backends/cpu/src/kernels/: attention.rs  conv2d.rs  elementwise.rs  layernorm.rs  matmul.rs  mod.rs  quant.rs  reduce.rs  rope.rs  softmax.rs
crates/sapient-backends/metal/: Cargo.toml
crates/sapient-backends/metal/src/: backend.rs  lib.rs
crates/sapient-backends/wgpu/: Cargo.toml  README.md
crates/sapient-backends/wgpu/src/: context.rs  lib.rs  matmul.rs  quant.rs  resident.rs
crates/sapient-backends/wgpu/src/shaders/: attention.wgsl  elementwise.wgsl  embed.wgsl  embed_q4_k.wgsl  embed_q6_k.wgsl  embed_q8_0.wgsl  kv_append.wgsl  kv_append_f16.wgsl  layer_norm.wgsl  matmul_nt.wgsl  matmul_nt_f32.wgsl  matmul_nt_mt.wgsl  matmul_nt_q4_k.wgsl  matmul_nt_q4_k_mt.wgsl  matmul_nt_q6_k.wgsl  matmul_nt_q6_k_mt.wgsl  matmul_nt_q8_0.wgsl  matmul_nt_q8_0_mt.wgsl  rms_norm.wgsl  rope.wgsl  transpose_heads.wgsl
crates/sapient-backends/wgpu/tests/: matmul.rs  resident.rs
crates/sapient-cli/: Cargo.toml
crates/sapient-cli/src/: hub.rs  main.rs  markdown.rs  progress.rs  server.rs  stats.rs  ui.rs  update.rs
crates/sapient-core/: Cargo.toml
crates/sapient-core/src/: buffer.rs  dtype.rs  error.rs  lib.rs  shape.rs  tensor.rs
crates/sapient-ffi/: Cargo.toml  README.md
crates/sapient-ffi/src/: lib.rs
crates/sapient-generate/: Cargo.toml
crates/sapient-generate/examples/: duplex_spike.rs
crates/sapient-generate/src/: converse.rs  device.rs  kokoro_tts.rs  kv_cache.rs  lib.rs  pipeline.rs  sampler.rs  sentence.rs  speak.rs  speculative.rs  transcribe.rs  vlm.rs
crates/sapient-generate/tests/: gemma3_e2e.rs  kokoro_tts_e2e.rs  kokoro_window_probe.rs  live_stt_e2e.rs  moe_bench.rs  moe_e2e.rs  transcribe_e2e.rs  vlm_e2e.rs  vlm_geometry_probe.rs
crates/sapient-hub/: Cargo.toml
crates/sapient-hub/src/: cache.rs  client.rs  download.rs  gguf.rs  lib.rs  model_info.rs  registry.rs  resolver.rs  snac_config.rs  whisper_config.rs
crates/sapient-hub/tests/: download_parallel.rs
crates/sapient-io/: Cargo.toml
crates/sapient-io/src/: gguf.rs  lib.rs  onnx.rs  safetensors.rs
crates/sapient-ir/: Cargo.toml
crates/sapient-ir/src/: graph.rs  lib.rs  node.rs  op.rs  shape_inference.rs
crates/sapient-ir/src/passes/: constant_folding.rs  dead_code.rs  fusion.rs  layout.rs  mod.rs
crates/sapient-models/: Cargo.toml
crates/sapient-models/src/: gguf_weights.rs  lib.rs  registry.rs  weights.rs
crates/sapient-models/src/architectures/: bert.rs  gemma.rs  gpt2.rs  llama.rs  mixtral.rs  mod.rs  phi.rs  qwen.rs
crates/sapient-models/src/forward/: backend.rs  common.rs  conv.rs  gemma3.rs  llama.rs  mlx_engine.rs  mod.rs  phi.rs  siglip.rs  snac.rs  wgpu_engine.rs  whisper.rs  whisper_wgpu.rs
crates/sapient-models/src/forward/kokoro/: albert.rs  decoder.rs  loader.rs  mod.rs  model.rs  ops.rs  predictor.rs  stage_tests.rs
crates/sapient-models/tests/: cpu_repack.rs  forward_test.rs  inference_test.rs  moe_coherence.rs  snac_coherence.rs  wgpu_coherence.rs  whisper_coherence.rs  whisper_wgpu_coherence.rs
crates/sapient-models/tests/fixtures/: kokoro_hello.safetensors  snac_decode.json
crates/sapient-runtime/: Cargo.toml
crates/sapient-runtime/src/: lib.rs  model.rs  session.rs
crates/sapient-scheduler/: Cargo.toml
crates/sapient-scheduler/src/: batcher.rs  executor.rs  lib.rs  request.rs  scheduler.rs
crates/sapient-telemetry/: Cargo.toml
crates/sapient-telemetry/src/: lib.rs  metrics.rs  profiler.rs  telemetry.rs
crates/sapient-tokenizers/: Cargo.toml
crates/sapient-tokenizers/src/: chat.rs  lib.rs  tokenizer.rs  whisper.rs
docs/: BENCHMARKS.md  DUPLEX_SPIKE.md  IOS_PORTING.md  MOBILE.md  PI.md  PROJECT_GUIDE.md  ROADMAP.md  SERVING.md  SERVING_BENCHMARKS.md
docs/assets/: bench_v053.json  results.json
examples/: README.md
examples/android-chat/: README.md  build.gradle.kts  settings.gradle.kts
examples/android-chat/app/: build.gradle.kts
examples/react-native-chat/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
examples/swift-chat/: .gitignore  Package.swift  README.md  project.yml
examples/swift-chat/iOS/: SapientChatApp.swift
results/: ollama_result.json  ollama_run_1.json  ollama_run_2.json  ollama_run_3.json  sapient_heap.json  sapient_mmap.json
results/v033/: sapient_cpu_0.5b.json  sapient_cpu_1.5b.json  sapient_metal_0.5b.json  sapient_metal_1.5b.json  summary.json
scripts/: bench_compete.py  bench_gpu_7_6.sh  bench_serve.py  bench_wgpu.py  benchmark-compare.sh  benchmark.sh  convert_kokoro_to_safetensors.py  convert_snac_to_safetensors.py  gen-benchmark-charts.py  gen-benchmark-report.py  package-android.sh  package-swift.sh  publish-all.sh  sts_test.py  update-homebrew-formula.sh  yank-all.sh
scripts/android-maven/: build.gradle.kts  settings.gradle.kts
sdks/react-native/: .gitignore  LICENSE  README.md  SapientReactNative.podspec  package-lock.json  package.json  react-native.config.js  tsconfig.json  ubrn.config.yaml
sdks/react-native/android/: CMakeLists.txt
sdks/react-native/cpp/: SapientReactNativeImpl.cpp  SapientReactNativeImpl.h  openhorizon-sapient-react-native.cpp  (+1 more)
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: sse.ts  (+4 more)
tests/integration/: mlp_test.rs
(+14 files in other folders)
