[workspace]
members = [
    "crates/sapient-core",
    "crates/sapient-ir",
    "crates/sapient-backends/cpu",
    "crates/sapient-backends/metal",
    "crates/sapient-backends/wgpu",
    "crates/sapient-scheduler",
    "crates/sapient-io",
    "crates/sapient-telemetry",
    "crates/sapient-runtime",
    "crates/sapient-hub",
    "crates/sapient-tokenizers",
    "crates/sapient-models",
    "crates/sapient-audio",
    "crates/sapient-generate",
    "crates/sapient-ffi",
    "crates/sapient-cli",
]
resolver = "2"

[workspace.package]
version       = "0.6.0"
edition       = "2021"
authors       = ["SAPIENT Contributors"]
license       = "AGPL-3.0-only"
repository    = "https://github.com/SkidGod4444/sapient"
homepage      = "https://github.com/SkidGod4444/sapient"
documentation = "https://docs.rs/sapient-runtime"
description   = "Fast LLM & SLM inference engine — run any HuggingFace model with one line of Rust"
keywords      = ["llm", "llama", "mistral", "transformers", "inference"]
categories    = ["science", "algorithms", "text-processing"]
readme        = "README.md"
rust-version  = "1.82"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Internal crates — version is required so they can be published to crates.io
# (cargo uses the version for the registry dep and the path for local builds).
sapient-core         = { path = "crates/sapient-core", version = "0.6.0" }
sapient-ir           = { path = "crates/sapient-ir", version = "0.6.0" }
sapient-backends-cpu = { path = "crates/sapient-backends/cpu", version = "0.6.0" }
sapient-backends-metal = { path = "crates/sapient-backends/metal", version = "0.6.0" }
sapient-backends-wgpu = { path = "crates/sapient-backends/wgpu", version = "0.6.0" }
sapient-scheduler    = { path = "crates/sapient-scheduler", version = "0.6.0" }
sapient-io           = { path = "crates/sapient-io", version = "0.6.0" }
sapient-telemetry    = { path = "crates/sapient-telemetry", version = "0.6.0" }
sapient-runtime      = { path = "crates/sapient-runtime", version = "0.6.0" }
sapient-hub          = { path = "crates/sapient-hub", version = "0.6.0" }
sapient-tokenizers   = { path = "crates/sapient-tokenizers", version = "0.6.0" }
sapient-models       = { path = "crates/sapient-models", version = "0.6.0" }
sapient-audio        = { path = "crates/sapient-audio", version = "0.6.0" }
sapient-generate     = { path = "crates/sapient-generate", version = "0.6.0" }

# Core utilities
thiserror      = "1.0"
anyhow         = "1.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
base64         = "0.22"
bincode        = "1.3"
uuid           = { version = "1.0", features = ["v4", "serde"] }
bytemuck       = { version = "1.14", features = ["derive"] }
ordered-float  = { version = "4.2", features = ["serde"] }

# Cross-platform GPU compute (Vulkan / DX12 / Metal / GL) — Intel/AMD/Nvidia/Apple
# Default features include the native backends (vulkan, metal, dx12, gles) + wgsl.
wgpu           = "22"
pollster       = "0.3"

# Async & Parallel
tokio        = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
rayon        = "1.8"
flume        = "0.11"
parking_lot  = "0.12"
futures      = "0.3"
async-trait  = "0.1"

# Math & Compute
matrixmultiply = "0.3"
half           = { version = "2.3", features = ["serde", "bytemuck"] }
num-traits     = "0.2"

# Formats
memmap2 = "0.9"
prost   = "0.12"

# Audio (on-device STT/TTS front-end — pure Rust, no FFI)
# symphonia: container/codec decode (WAV/FLAC/OGG/MP3/AAC/ALAC). Defaults cover
# wav/flac/ogg/vorbis/pcm; extra features add the lossy/Apple formats.
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "alac"] }
rubato    = "0.15"   # high-quality sinc resampling → 16 kHz mono
realfft   = "3.3"    # real-input FFT (wraps rustfft) for STFT
cpal      = "0.15"   # cross-platform mic/speaker I/O (real-time STS, audio-io feature)
objc      = "0.2"    # macOS AVFoundation microphone-permission request (audio-io)
block     = "0.1"    # ObjC completion-handler block for the above

# HuggingFace ecosystem
hf-hub     = { version = "0.4.0", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
tokenizers = { version = "0.23", features = ["http"] }
# `json` enables the `tojson` filter, which the tool-calling chat templates
# (Qwen2.5, Hermes) use to serialize tool definitions and call arguments.
# Without it a tool-aware template fails to render at all.
minijinja  = { version = "2.0", features = ["json"] }

# HTTP & Download
reqwest   = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
indicatif = "0.17"
console   = "0.15"
rustyline = "14"
termimad  = "0.31"
syntect   = { version = "5.2", default-features = false, features = ["default-fancy"] }
sha2      = "0.10"
dirs      = "5.0"
sysinfo   = "0.32"   # live system/process telemetry for `sapient stats`

# Telemetry
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false, features = ["http-listener"] }
opentelemetry               = { version = "0.32", features = ["trace"] }
opentelemetry_sdk           = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp          = { version = "0.32", features = ["grpc-tonic"] }

# CLI & HTTP
clap       = { version = "4.4", features = ["derive", "env"] }
axum       = { version = "0.7", features = ["json"] }
tower      = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
ureq       = { version = "2.12", default-features = false, features = ["tls"] }
flate2     = "1.0"
tar        = "0.4"
zip        = { version = "2.2", default-features = false, features = ["deflate"] }

# Logging
log        = "0.4"
env_logger = "0.11"

# Testing & Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1.4"
approx    = "0.5"
tempfile  = "3.10"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "debuginfo"

[profile.bench]
inherits = "release"
debug    = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
