[package]
name        = "sapient-audio"
description = "Audio front-end for SAPIENT — decode/resample + log-mel spectrogram (pure Rust, no FFI)"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
sapient-core = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
symphonia    = { workspace = true }
rubato       = { workspace = true }
realfft      = { workspace = true }
# Real-time mic/speaker I/O — optional, only for the speech-to-speech cascade.
cpal  = { workspace = true, optional = true }
flume = { workspace = true, optional = true }

[features]
# Live microphone capture + speaker playback (cpal). Off by default so the core
# build (and headless CI) needs no audio device libraries (ALSA dev headers on Linux).
audio-io = ["dep:cpal", "dep:flume"]

[dev-dependencies]
approx = { workspace = true }
