[package]
name                 = "sapient-cli"
description          = "Command-line tool and HTTP server for the SAPIENT inference engine"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sapient"
path = "src/main.rs"

[dependencies]
sapient-backends-cpu = { workspace = true }
sapient-core         = { workspace = true }
sapient-generate     = { workspace = true }
sapient-hub          = { workspace = true }
sapient-io           = { workspace = true }
sapient-ir           = { workspace = true }
sapient-runtime      = { workspace = true }
sapient-scheduler    = { workspace = true }
sapient-telemetry    = { workspace = true }
sapient-tokenizers   = { workspace = true }

anyhow      = { workspace = true }
axum        = { workspace = true }
clap        = { workspace = true }
console     = { workspace = true }
dirs        = { workspace = true }
flate2      = { workspace = true }
futures     = { workspace = true }
indicatif   = { workspace = true }
reqwest     = { workspace = true }
rustyline   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
syntect     = { workspace = true }
tar         = { workspace = true }
termimad    = { workspace = true }
tempfile    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tower-http   = { workspace = true }
tracing     = { workspace = true }
ureq        = { workspace = true }
zip         = { workspace = true }

[features]
default = []
mlx = ["sapient-generate/mlx"]

[target.'cfg(target_os = "macos")'.dependencies]
sapient-backends-metal = { workspace = true }
