[package]
name                 = "sapient-cli"
description          = "Command-line tool and HTTP server for the SAPIENT inference engine"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sapient"
path = "src/main.rs"

[dependencies]
sapient-backends-cpu = { workspace = true }
sapient-core         = { workspace = true }
sapient-generate     = { workspace = true }
sapient-hub          = { workspace = true }
sapient-io           = { workspace = true }
sapient-ir           = { workspace = true }
sapient-runtime      = { workspace = true }
sapient-scheduler    = { workspace = true }
sapient-telemetry    = { workspace = true }
sapient-tokenizers   = { workspace = true }

anyhow      = { workspace = true }
# Only needed for `sapient converse` (audio-io); used for utterance resampling.
sapient-audio = { workspace = true, optional = true }
axum        = { workspace = true, features = ["multipart"] }
clap        = { workspace = true }
console     = { workspace = true }
dirs        = { workspace = true }
flate2      = { workspace = true }
futures     = { workspace = true }
indicatif   = { workspace = true }
reqwest     = { workspace = true }
rustyline   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
syntect     = { workspace = true }
tar         = { workspace = true }
termimad    = { workspace = true }
tempfile    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tower-http   = { workspace = true }
tracing     = { workspace = true }
ureq        = { workspace = true }
zip         = { workspace = true }

[features]
# `audio-io` ships by default so `sapient converse` (live mic/speaker) works out
# of the box on macOS (CoreAudio) and Windows (WASAPI), which need no extra system
# libraries. On Linux it needs the ALSA dev headers (`libasound2-dev`) at build
# time; if you don't want that, build with `--no-default-features` (drops only the
# live-voice `converse` command — chat/transcribe/speak/serve are unaffected).
default = ["audio-io"]
mlx = ["sapient-generate/mlx"]
# Cross-platform GPU inference (Vulkan/DX12/Metal via wgpu) — Intel/AMD/Nvidia/Apple.
# Build: cargo build --release -p sapient-cli --features wgpu; then `--backend wgpu`.
wgpu = ["sapient-generate/wgpu"]
# Live mic/speaker speech-to-speech (`sapient converse`).
audio-io = ["sapient-generate/audio-io", "dep:sapient-audio"]

[target.'cfg(target_os = "macos")'.dependencies]
sapient-backends-metal = { workspace = true }

# Process-liveness check for the `sapient serve` single-instance lock (kill(pid, 0)).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
