[package]
name        = "sapient-generate"
description = "Text generation for SAPIENT — Pipeline::from_pretrained, KV cache, greedy/top-p/top-k sampling, streaming"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
sapient-core       = { workspace = true }
sapient-ir         = { workspace = true }
sapient-backends-cpu = { workspace = true }
sapient-io         = { workspace = true }
sapient-runtime    = { workspace = true }
sapient-hub        = { workspace = true }
sapient-tokenizers = { workspace = true }
sapient-models     = { workspace = true }
sapient-audio      = { workspace = true }

thiserror  = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tokio-stream = { workspace = true }
tracing    = { workspace = true }
futures    = { workspace = true }
async-trait = { workspace = true }

[features]
default = []
mlx = ["sapient-models/mlx"]
# Cross-platform GPU inference (Vulkan/DX12/Metal via wgpu) — Intel/AMD/Nvidia/Apple.
wgpu = ["sapient-models/wgpu"]

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
