[package]
name        = "sapient-hub"
description = "HuggingFace Hub client for SAPIENT — download any model with one call"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
sapient-core = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }

# HF Hub
hf-hub    = { workspace = true }
reqwest   = { workspace = true }
indicatif = { workspace = true }
sha2      = { workspace = true }
dirs      = { workspace = true }
futures   = { workspace = true }
num_cpus  = "1.16"

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
