[package]
name        = "sapient-ir"
description = "Intermediate representation, compute graph, op types, and optimisation passes for SAPIENT"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sapient-core = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
bincode      = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
