[package]
name        = "sapient-models"
description = "Pre-built LLM architecture graph builders for SAPIENT — Llama, Mistral, Phi, Gemma, GPT-2, BERT, Qwen"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
sapient-core         = { workspace = true }
sapient-ir           = { workspace = true }
sapient-hub          = { workspace = true }
sapient-io           = { workspace = true }
sapient-backends-cpu = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
ordered-float = { workspace = true }
parking_lot  = { workspace = true }

[features]
default = []
mlx = ["dep:mlx-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
mlx-rs = { version = "0.25.3", default-features = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
