[package]
name        = "sapient-runtime"
description = "Session management, model loading pipeline, and inference orchestration for SAPIENT"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sapient-core         = { workspace = true }
sapient-ir           = { workspace = true }
sapient-backends-cpu = { workspace = true }
sapient-scheduler    = { workspace = true }
sapient-io           = { workspace = true }
sapient-telemetry    = { workspace = true }

thiserror   = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
sapient-backends-metal = { workspace = true }
