[package]
name        = "sapient-telemetry"
description = "Structured tracing, metrics, and profiling for SAPIENT (OpenTelemetry-compatible)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
otel    = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
]
prometheus = ["metrics-exporter-prometheus"]

[dependencies]
thiserror           = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
metrics             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }

opentelemetry       = { workspace = true, optional = true }
opentelemetry_sdk   = { workspace = true, optional = true }
opentelemetry-otlp  = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

parking_lot = { workspace = true }
