[package]
name        = "sapient-backends-wgpu"
description = "Cross-platform GPU backend (Vulkan/DX12/Metal/GL via wgpu) for the SAPIENT inference engine — Intel, AMD, Nvidia, Apple"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
wgpu     = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing  = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
